--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore:
+
   flutter:
     sdk: flutter
   sqflite: ^2.0.0+4
-
+  firebase_core: ^2.8.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.3.0
 
 dev_dependencies:
   flutter_test:
