--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
 
   sqflite: ^2.0.0+4
   firebase_core: ^2.8.0
+  firebase_storage: ^11.2.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -44,6 +45,8 @@ dependencies:
   flutter_tex: ^4.0.3+4
   flutter_math_fork: ^0.7.1
   percent_indicator: ^4.0.1
+  path: ^1.8.0
+  image_picker: ^0.8.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
