--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   flutter_math_fork: ^0.7.1
   percent_indicator: ^4.0.1
   path: ^1.8.0
-  image_picker: ^0.8.4
+#  image_picker: ^0.8.4
+  cached_network_image: ^3.2.3
+  image_picker: ^1.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
