--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.0
   flutter_launcher_icons: ^0.13.1
+  http: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
